Port from M-UI's grid to React-Bootstrap's (Row and Col components) for Auth (Signin/Signup) and Footer UI layout, hence remove every appearance of M-UI's grid in order for to (some extent) decrease bundle size...and fix every layout bug that ensued due to porting...took a while; Fix some logical bugs (by programmer) in Nav for Notifications that causes API call(s) to be made when component isn't mounted...will still have to make some changes (to the flow) code-wise and performance-wise; Do more performance optimizations for chat in order for to increase performance and to also make animations/transitions more fluid (especially for mobiles...I'm proud to say that, so far, this has been achieved); Do few general fixes; And the hallmark...add 'Copy message(s)' feature...this required some hacking and ingenuity from my end, and it works perfectly, we move! ;) So (a)  message/messages can now be copied (with timestamps for more than one selection, and no timestamp for a selection).

--- a/teach-me-ui/src/styles/_misc.scss
+++ b/teach-me-ui/src/styles/_misc.scss
@@ -175,8 +175,8 @@ hr {
   border: none;
 }
 
-[class*=dialog] {
-  button[class*=text] {
+[class*='dialog'] {
+  button[class*='text'] {
     color: $theme-secondary !important;
     background-color: transparent;
   }
@@ -505,6 +505,30 @@ div {
 
 .font-bold {
   font-weight: bold !important;
+}
+
+.uppercase {
+  text-transform: uppercase !important;
+}
+
+.w-0 {
+  width: 0;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-100 {
+  width: 100%;
+}
+
+.vw-100 {
+  width: 100vw;
+}
+
+.h-0 {
+  height: 0;
 }
 
 .h-100 {
